<resources>
    <string name="app_name">FireBaseGallery</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="made">Made by Jolanta Szyszkiewicz</string>
    <string name="wybierz_obrazek">Wybierz obrazek:</string>
    <string name="wybrany_obrazek_przez_uzytkownika">Wybrany obrazek przez użytkownika</string>
    <string name="ustaw_tytul">Ustaw tytuł:</string>
    <string name="ustaw_opis">Ustaw opis:</string>
    <string name="zapisz">Zapisz</string>
    <string name="pobierz">Pobierz</string>
    <string name="przelacz">Przełącz użytkownika</string>
    <string name="zalogowany">Jesteś zalogowany jako:</string>
    <string name="zaloguj">Zaloguj się</string>
    <string name="ok">OK</string>
    <string name="zapamietaj_mnie">Zapamiętaj mnie</string>
    <string name="witaj">Witaj!</string>
</resources>
