<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.szyszjola.firebasegallery.AddingNewImage"
    android:id="@+id/adding_layout">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="11dp"
        android:text="@string/wybierz_obrazek"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/wybrany_obrazek_przez_uzytkownika"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/add_image" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="21dp"
        android:text="@string/ustaw_tytul"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/editTitle"
        android:layout_marginTop="15dp"
        android:text="@string/ustaw_opis"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLines="2"
        android:text=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:backgroundTint="@color/colorDark"
        android:text="@string/zapisz" />


</RelativeLayout>
