<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.szyszjola.firebasegallery.LogIn">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/sign_out_button"
        style="@android:style/Widget.Material.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/user_name"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:text="@string/wyloguj"
        tools:ignore="RelativeOverlap"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="99dp"
        android:focusable="false"
        android:textAlignment="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvPowitalny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/witaj"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="invisible" />


    <CheckBox
        android:id="@+id/checkboxZapamietaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sign_out_button"
        android:layout_alignBottom="@+id/sign_out_button"
        android:layout_alignStart="@+id/user_name"
        android:text="@string/zapamietaj_mnie" />

    <Button
        android:id="@+id/buttonPrzejdz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/arr"
        android:text="@string/ok"
        android:visibility="invisible" />
</RelativeLayout>
